# cpp_yolo_demo

./: .clang-format  CMakeLists.txt  detect_camera.cpp  detect_img.cpp  yolov8.h
